Prevent flickering on page load

--- a/content/src/main/content/jcr_root/apps/acs-commons/components/utilities/quickly/clientlibs/app/css/quickly.less
+++ b/content/src/main/content/jcr_root/apps/acs-commons/components/utilities/quickly/clientlibs/app/css/quickly.less
@@ -25,6 +25,7 @@
 
 #ACS-COMMONS {
   #acs-commons-quickly {
+    display: none;
     background: #fff;
     border-width: 0;
     color: #000;
@@ -70,7 +71,7 @@
       list-style: none;
       max-height: @max-height;
       overflow-y: scroll;
-      margin-bottom: 0;
+      margin: 0;
       padding: 0;
 
       .quickly-result {
